load cat age script

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a
             href="https://www.freepik.com/free-vector/vector-background-cartoon-playground-park-summer-landscape-with-green-trees-plants-bu_4015263.htm#query=playground&position=0&from_view=search&track=sph">Image
             by vectorpouch</a>
-            <!-- <script src="./src/scripts/catAge.js"></script> -->
+            <script src="./src/scripts/catAge.js"></script>
     </footer>
 </body>
 
