update styling. Script successful caption no

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container-fluid content" style="background-image: url(./src/img/10654701_19143282.jpg); height: 100vh;">
             <h1>Welcome to My Playground</h1> 
             <h2>"All in a Day's Work"</h2>
-            <caption>Dr. Dre</caption>
+            <caption id="caption">Dr. Dre</caption>
             <div class="result" style = "font-weight: bold; font-style: italic; color: rgb(235, 221, 224); font-size: x-large; height: 80px;">
 
             </div>
