--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
         integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
         crossorigin="anonymous"></script>
+        <!-- script selector script -->
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                var select = document.getElementById("script-select");
+                select.addEventListener("change", function () {
+                    var selectedScript = this.value;
+                    var script = document.createElement("script");
+                    script.src = selectedScript;
+                    document.body.appendChild(script);
+                });
+            });
+        </script>
     <title>Playground</title>
 </head>
 
@@ -25,7 +37,7 @@
     <div class="img-fluid">
         <select id="script-select">
             <option value="./src/scripts/catAge.js">Cat Age Calculator</option>
-            <option value="./src/scripts/dogAge.js">Dog Age Calculator</option>
+            <option value="./src/scripts/dogyears.js">Dog Age Calculator</option>
             <!-- <option value="script3">Script 3</option> -->
         </select>
         
